force-app/main/default/objects/Transport__c/Transport__c.object-meta.xml
<CustomObject>
    <label>Transport</label>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Transport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>