force-app/main/default/objects/Transport__c/fields/Drop_Location__c.field-meta.xml
<CustomField>
    <fullName>Drop_Location__c</fullName>
    <label>Drop Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>