force-app/main/default/objects/Transport__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Transfer</fullName>
            </value>
            <value>
                <fullName>Group Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>